PROJECT(showfps)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

SUBDIRS(src/)

# OpenGL
INCLUDE(FindOpenGL)

# look for the freetype library
SET(FREETYPE_DIR ${CMAKE_MODULE_PATH})
FIND_PACKAGE(FREETYPE REQUIRED)
SET(CXXFLAGS "${LIBFREETYPE_CFLAGS}")

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR})
