PROJECT(showfps)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

# OpenGL
INCLUDE(FindOpenGL)

# look for the freetype library
SET(FREETYPE_DIR ${CMAKE_MODULE_PATH})
FIND_PACKAGE(FREETYPE REQUIRED)
SET(CXXFLAGS "${LIBFREETYPE_CFLAGS}")

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/src/config.h.cmake ${CMAKE_BINARY_DIR}/src/config.h)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR})

SUBDIRS(src/)
SUBDIRS(data)

