PROJECT(showfps)

INCLUDE(CPack)
SET(CPACK_CMAKE_GENERATOR "Unix Makefiles")
SET(CPACK_GENERATOR "TGZ")
SET(CPACK_PACKAGE_NAME "showfps")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "1")
SET(CPACK_SOURCE_GENERATOR "TGZ")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "cmake-0.0.1")
SET(CPACK_SOURCE_IGNORE_FILES "~$" "*.bz2$" "*.gz$" "*/build/*")


SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
SET(CMAKE_INCLUDE_CURRENT_DIR TRUE)

# OpenGL
INCLUDE(FindOpenGL)

# look for the freetype library
SET(FREETYPE_DIR ${CMAKE_MODULE_PATH})
FIND_PACKAGE(FREETYPE REQUIRED)
SET(CXXFLAGS "${LIBFREETYPE_CFLAGS}")

CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/src/config.h.cmake ${CMAKE_BINARY_DIR}/src/config.h)

INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIR})

SUBDIRS(src/)
SUBDIRS(data)

